Kind of fixed it a little bit

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
  </style> 
  
  <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.min.js" integrity="sha512-Siyxh4gyNM5SaERNa9BOZSPcu/auHyFUWn9OVFD7MxI3/dVPQklE7tfqS+pLmPHF1zo6UdDaJAp/thihrf0c7w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
- <script> 
+ <script>
    timer = document.getElementById("timer");
    synth = new Tone.Synth().toDestination();
-   
+
    function sound() {
      synth.triggerAttackRelease("C4", "8n");
    };
@@ -25,12 +25,12 @@
      ms = 1000 - ms;
      timer.innerHTML = 60 - now.getSeconds();
      if (now.getSeconds() == 0) {
-       run_seq();  
+       run_seq();
      }
      setTimeout(update, ms);
    }
    update();
-   
+
    var seq = new Tone.Sequence(
      function(time, note) {
        if (note) {
@@ -50,12 +50,18 @@
      "8n"
    );
    seq.loop = false;
+   Tone.start();
    Tone.Transport.start();
    function run_seq() {
      const wait = Math.floor(Math.random() * 4);
+     console.log(`+${wait}m`)
      seq.start(`+${wait}m`);
    }
-  
+   document.addEventListener('click', async () => {
+    if (Tone.context.state === 'suspended') {
+     await Tone.start();
+    }
+   });
  </script> 
 
 </html>
